--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "gulp": "^3.9.1",
+    "lodash": "^4.17.10",
     "react": "^16.4.2",
     "react-apollo": "^2.1.9",
     "react-dom": "^16.4.2",
@@ -24,6 +25,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "17.0.0",
     "eslint-plugin-import": "^2.12.0",
