--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "gulp": "^3.9.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
     "react-apollo": "^2.1.9",
