--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "semantic-ui-css": "^2.3.3",
-    "semantic-ui-react": "^0.82.2"
+    "semantic-ui-react": "^0.82.2",
+    "styled-components": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
