--- a/package.json
+++ b/package.json
@@ -7,19 +7,27 @@
     "apollo-client": "^2.3.7",
     "apollo-link": "^1.2.2",
     "apollo-link-http": "^1.5.4",
+    "apollo-link-ws": "^1.0.8",
+    "apollo-utilities": "^1.0.18",
+    "formik": "^1.0.2",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "gulp": "^3.9.1",
+    "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.9",
     "react-dom": "^16.4.2",
+    "react-moment": "^0.7.9",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.2",
-    "styled-components": "^3.4.2"
+    "styled-components": "^3.4.2",
+    "subscriptions-transport-ws": "^0.9.14",
+    "ws": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
