--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo-link-http": "^1.5.4",
     "apollo-link-ws": "^1.0.8",
     "apollo-utilities": "^1.0.18",
+    "downshift": "^2.1.0",
     "formik": "^1.0.2",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
